# PROJECT-XX

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: Animation.h  Console.h  Constants.h  Table.h
libraries/tabulate-master/include/tabulate/: color.hpp
sources/: Animation.cpp  Console.cpp
